--- a/TaskForThe6thModuleOfThe2ndCourseOfDataScienceIBM.ipynb
+++ b/TaskForThe6thModuleOfThe2ndCourseOfDataScienceIBM.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Title of the Notebook\n"
+        "# Task For The 6th Module Of The 2nd Course Of Data Science IBM"
       ],
       "metadata": {
         "id": "VJHvZ1R4UUKK"
